# docs/swagger.json
@@ -15,7 +15,7 @@
     "paths": {
         "/posts": {
             "get": {
-                "description": "Fetches a collection of posts. Requires authentication using X-Account-Number.",
+                "description": "Fetches a collection of posts. Requires authentication using X-Account-Number.                           If both sorting options are provided, priority will be given to the SortByCreationDate field.",
                 "consumes": [
                     "application/json"
                 ],
@@ -33,6 +33,44 @@
                         "name": "X-Account-Number",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Page number (default: 1)",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Number of items per page (default: 10)",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "asc",
+                            "desc"
+                        ],
+                        "type": "string",
+                        "default": "",
+                        "description": "Sort by creation date (asc or desc)",
+                        "name": "creation_date",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "asc",
+                            "desc"
+                        ],
+                        "type": "string",
+                        "default": "",
+                        "description": "Sort by likes (asc or desc)",
+                        "name": "sort_by_likes",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -77,7 +115,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/posts.PostRequest"
+                            "$ref": "#/definitions/models.PostRequest"
                         }
                     }
                 ],
@@ -142,7 +180,7 @@
                     "200": {
                         "description": "Post retrieved successfully",
                         "schema": {
-                            "$ref": "#/definitions/posts.GetPost"
+                            "$ref": "#/definitions/models.GetPost"
                         }
                     },
                     "400": {
@@ -253,7 +291,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/posts.PostRequest"
+                            "$ref": "#/definitions/models.PostRequest"
                         }
                     }
                 ],
@@ -320,7 +358,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/comments.Comments"
+                                "$ref": "#/definitions/models.Comments"
                             }
                         }
                     },
@@ -365,7 +403,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/comments.CreateCommentRequest"
+                            "$ref": "#/definitions/models.CreateCommentRequest"
                         }
                     }
                 ],
@@ -506,7 +544,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/comments.CreateCommentRequest"
+                            "$ref": "#/definitions/models.CreateCommentRequest"
                         }
                     }
                 ],
@@ -578,7 +616,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/posts.UpdateLikesRequest"
+                            "$ref": "#/definitions/models.UpdateLikesRequest"
                         }
                     }
                 ],
@@ -627,7 +665,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/user.UserResponse"
+                            "$ref": "#/definitions/models.UserResponse"
                         }
                     }
                 }
@@ -635,29 +673,6 @@
         }
     },
     "definitions": {
-        "comments.Comments": {
-            "type": "object",
-            "properties": {
-                "content": {
-                    "type": "string"
-                },
-                "createdAt": {
-                    "type": "string"
-                }
-            }
-        },
-        "comments.CreateCommentRequest": {
-            "type": "object",
-            "required": [
-                "content"
-            ],
-            "properties": {
-                "content": {
-                    "type": "string",
-                    "minLength": 2
-                }
-            }
-        },
         "helper.ErrorMessage": {
             "type": "object",
             "properties": {
@@ -674,7 +689,7 @@
                 }
             }
         },
-        "posts.GetPost": {
+        "models.Comments": {
             "type": "object",
             "properties": {
                 "content": {
@@ -682,16 +697,10 @@
                 },
                 "createdAt": {
                     "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "totalLikes": {
-                    "type": "integer"
                 }
             }
         },
-        "posts.PostRequest": {
+        "models.CreateCommentRequest": {
             "type": "object",
             "required": [
                 "content"
@@ -703,7 +712,39 @@
                 }
             }
         },
-        "posts.UpdateLikesRequest": {
+        "models.GetPost": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "isLiked": {
+                    "type": "integer"
+                },
+                "totalLikes": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.PostRequest": {
+            "type": "object",
+            "required": [
+                "content"
+            ],
+            "properties": {
+                "content": {
+                    "type": "string",
+                    "minLength": 2
+                }
+            }
+        },
+        "models.UpdateLikesRequest": {
             "type": "object",
             "required": [
                 "action"
@@ -718,7 +759,7 @@
                 }
             }
         },
-        "user.UserResponse": {
+        "models.UserResponse": {
             "type": "object",
             "properties": {
                 "accountNumber": {
